Fixed aare widget on mobile

--- a/theme/_css/layout.less
+++ b/theme/_css/layout.less
@@ -273,7 +273,6 @@
         text-align: center;
         background: url(../_img/aare.png) center center no-repeat;
         padding-top: 6px;
-        display:none;
     }
     .header date {
         display: block;
